Avance mobile responsive

--- a/index.html
+++ b/index.html
@@ -4,15 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="referrer" content="no-referrer">
+<!--  -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Otomanopee+One&display=swap" rel="stylesheet">
+<!--  -->
+    <link rel="stylesheet" href="diseños/mobile.css">
+    <link rel="stylesheet" href="diseños/tablet.css" media="screen and (min-width: 700px)">
+    <link rel="stylesheet" href="diseños/desktop.css" media="screen and (min-width: 1000px)"> 
+<!--  -->
     <title>Document</title>
 </head>
 <body>
-    <header>
-
+    <header class=cabecera>
+        <ul class="cabecera-list">
+            <li>
+                <figure><img class="cabecera-image" src="https://i.imgur.com/HFWeFUc.png" alt="Libro"></figure>
+            </li>
+            <li>
+                <p class="cabecera-paragraph">Peque</p>
+            </li>
+        </ul>
     </header>
     <main>
-        <p>Probando</p>
+        
     </main>
 </body>
 </html>
