--- a/index.html
+++ b/index.html
@@ -28,7 +28,36 @@
         </ul>
     </header>
     <main>
-        
+        <section class="noticias">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quaerat officia blanditiis magnam nihil! Perferendis quidem consectetur quia quam? Porro vero doloribus, temporibus consectetur delectus expedita ex dignissimos voluptatum sunt!</p>
+            <figure><img src="" alt=""></figure>
+        </section>
+         <div class="maincontainer">
+            <section class=secuno>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat reprehenderit ipsum tenetur, nam illum aut incidunt beatae tempora assumenda sit, sint neque sed eos nisi nobis deserunt inventore sunt quia.
+                </p>
+            </section>
+            <section class="secdos">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eaque eius dolorem excepturi ratione quasi soluta quas doloremque obcaecati suscipit, temporibus, officia id magni aliquid nisi repellendus ipsa possimus dicta!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ad, ex enim commodi, neque laboriosam voluptatem harum eos id iusto impedit quo maiores, inventore dicta fuga delectus nemo dolore velit!</p>
+
+            </section>
+
+            <section class="sectres">
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sint dicta aliquam eligendi quaerat at ipsam odit non, reiciendis, quibusdam eos magnam qui cupiditate corporis repudiandae error obcaecati facilis exercitationem!</p>
+            </section>
+
+            <section class="seccuatro">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem accusantium minima, nobis labore aut itaque officia consectetur corporis non tenetur libero quae sed exercitationem nisi vero harum cupiditate esse ut?
+                </p>
+
+            </section>
+         </div>
     </main>
 </body>
 </html>
