--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@
             </section>
          </div>
     </main>
+    <footer>
+        <h1>Pie de pagina</h1>
+    </footer>
 </body>
 </html>
